@@ -61,3 +61,8 @@ a.image:link		{	text-decoration: none; }
 a.image:visited 	{	text-decoration: none; }
 a.image:hover 		{	text-decoration: none; }
 a.image:active 		{	text-decoration: none; }
+
+a.underline:link { text-decoration: underline; }
+a.underline:visited 	{ text-decoration: underline; }
+a.underline:hover  { text-decoration: underline; }
+a.underline:active  { text-decoration: underline; }
