@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBXNEXT-279] added links to parent elements for item and trigger form (Vedmak)
  - [ZBX-2376] port parameter to tcp and tcp_perf is now mandatory (asaveljevs)
  - [ZBX-2376] added ldap, ldap_perf, ntp, and ntp_perf simple checks (asaveljevs)
  - [ZBX-808] renamed service.ntp parameter of net.tcp.service{.perf} to ntp (asaveljevs)
